# dav-marnix

./: .gitignore  .lefthook.yml  README.md  config.toml  lefthook.yml  pyproject.toml
img/: family_group_chat_topics.html
src/: heatmaps.py
src/marn-x/: heatmaps.py  main.py  settings.py  worstenbroodjes.py
src/marn_x/: congratulations.py  dashboard.py  family_group_chat_topics.py  full_stopping_and_thinking.py  heatmaps.py  hyperlinks_vs_genders.py  interpunctuality.py  main.py  settings.py  worstenbroodjes.py
src/marn_x/utils/: dashboard.py  data_transformers.py  file_operations.py  plot_styling.py  settings.py
src/marnx/: congratulations.py  heatmaps.py  hyperlinks_vs_genders.py  main.py  robberts_spelling_bee.py  settings.py  worstenbroodjes.py
