[project]
name = "dav-marnix"
version = "0.1.0"
description = "Marnix' repo voor het vak DAV"
author = "Marnix Ober <marnix.ober@student.hu.nl>"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "fairseq>=0.12.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "ppca>=0.0.4",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "simpletransformers>=0.70.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.2",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.2.0",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marn-x"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true

[tool.uv.sources]
fairseq = { git = "https://github.com/One-sixth/fairseq.git" }
