[project]
name = "dav-marnix"
version = "0.1.0"
description = "Marnix' repo voor het vak DAV"
author = "Marnix Ober <marnix.ober@student.hu.nl>"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "emoji>=2.14.1",
    "fairseq>=0.12.2",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "llvmlite>=0.44.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "ppca>=0.0.4",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.2",
    "bertopic>=0.17.0",
    "hdbscan>=0.8.40",
    "protobuf>=3.20.3",
    "transformers>=4.51.0",
    "torch>=2.6.0",
    "accelerate>=1.6.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "mypy>=1.14.1",
    "notebooktester>=0.2.0",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marn-x"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true
