[project]
name = "marn_x"
version = "1.0"
description = "Marnix' repo voor het vak DAV"
authors = [{name = "Marnix Ober", email = "marnix.ober@student.hu.nl"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=11.1.0",
    "plotly==4.7.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.2",
    "bertopic[spacy]>=0.17.0",
    "transformers>=4.51.0",
    "torch>=2.6.0",
    "accelerate>=1.6.0",
    "umap-learn>=0.5.7",
    "statsmodels>=0.14.4",
    "nl-core-news-sm",
    "types-requests>=2.32.0.20250328",
    "wa-analyzer>=0.4.1",
    "streamlit==1.14.0",
    "altair==4.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "lefthook>=1.11.8",
    "mypy>=1.14.1",
    "notebooktester>=0.2.0",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
marn_x = "marn_x.main:main"
dashboard = "marn_x.utils.dashboard:dashboard_launcher"

[tool.hatch.build.targets.wheel]
packages = ["src/marn_x"]

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
pretty = true

[tool.uv.sources]
nl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.8.0/nl_core_news_sm-3.8.0-py3-none-any.whl" }
